// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render Transcript component 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex p-3"
      >
        <div
          class="w-full"
        >
          <h3
            class="text-center text-2xl font-bold mb-4 text-gray-800"
          >
            Transcript
          </h3>
          <div
            class="space-y-2"
          >
            <div
              class="flex border rounded mt-3 p-3 bg-white"
            >
              <div
                class="w-full"
              >
                <div
                  class="flex items-start space-x-4"
                >
                  <div
                    class="shrink-0"
                  >
                    <div
                      class="flex flex-col items-center mt-1"
                    >
                       
                      <div
                        class="mb-1"
                      >
                         
                        <div
                          class="rounded-full bg-blue-200 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
                        >
                          JS
                        </div>
                      </div>
                      <div
                        class="flex-grow flex flex-col items-center"
                      >
                         
                        <h4
                          class="m-0 text-center"
                        >
                          James Smith
                        </h4>
                         
                         
                      </div>
                    </div>
                  </div>
                  <div
                    class="grow"
                  >
                    <div
                      class="font-semibold text-gray-700 mb-1"
                    >
                      00:05
                    </div>
                    <div
                      class="text-gray-800 leading-relaxed"
                    >
                      <div>
                        Good morning, everyone. Thanks for joining today's call. I hope you all had a productive week.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex border rounded mt-3 p-3 bg-white"
            >
              <div
                class="w-full"
              >
                <div
                  class="flex items-start space-x-4"
                >
                  <div
                    class="shrink-0"
                  >
                    <div
                      class="flex flex-col items-center mt-1"
                    >
                       
                      <div
                        class="mb-1"
                      >
                         
                        <div
                          class="rounded-full bg-blue-200 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
                        >
                          JS
                        </div>
                      </div>
                      <div
                        class="flex-grow flex flex-col items-center"
                      >
                         
                        <h4
                          class="m-0 text-center"
                        >
                          James Smith
                        </h4>
                         
                         
                      </div>
                    </div>
                  </div>
                  <div
                    class="grow"
                  >
                    <div
                      class="font-semibold text-gray-700 mb-1"
                    >
                      00:15
                    </div>
                    <div
                      class="text-gray-800 leading-relaxed"
                    >
                      <div>
                        Hi, 
                        <span
                          class="font-bold"
                        >
                          Madison
                        </span>
                        ! How are you doing today? I wanted to quickly touch base on the client proposal.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex border rounded mt-3 p-3 bg-white"
            >
              <div
                class="w-full"
              >
                <div
                  class="flex items-start space-x-4"
                >
                  <div
                    class="shrink-0"
                  >
                    <div
                      class="flex flex-col items-center mt-1"
                    >
                       
                      <div
                        class="mb-1"
                      >
                         
                        <div
                          class="rounded-full bg-green-200 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
                        >
                          MB
                        </div>
                      </div>
                      <div
                        class="flex-grow flex flex-col items-center"
                      >
                         
                        <h4
                          class="m-0 text-center"
                        >
                          Madison Butler
                        </h4>
                         
                         
                      </div>
                    </div>
                  </div>
                  <div
                    class="grow"
                  >
                    <div
                      class="font-semibold text-gray-700 mb-1"
                    >
                      00:25
                    </div>
                    <div
                      class="text-gray-800 leading-relaxed"
                    >
                      <div>
                        Very good, thanks, 
                        <span
                          class="font-bold"
                        >
                          James
                        </span>
                        ! I'm doing well. The client proposal is almost ready, just finalizing a few figures.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex border rounded mt-3 p-3 bg-white"
            >
              <div
                class="w-full"
              >
                <div
                  class="flex items-start space-x-4"
                >
                  <div
                    class="shrink-0"
                  >
                    <div
                      class="flex flex-col items-center mt-1"
                    >
                       
                      <div
                        class="mb-1"
                      >
                         
                        <div
                          class="rounded-full bg-green-200 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
                        >
                          MB
                        </div>
                      </div>
                      <div
                        class="flex-grow flex flex-col items-center"
                      >
                         
                        <h4
                          class="m-0 text-center"
                        >
                          Madison Butler
                        </h4>
                         
                         
                      </div>
                    </div>
                  </div>
                  <div
                    class="grow"
                  >
                    <div
                      class="font-semibold text-gray-700 mb-1"
                    >
                      00:40
                    </div>
                    <div
                      class="text-gray-800 leading-relaxed"
                    >
                      <div>
                        Oh, before I forget, can you please send me the 
                        <span
                          class="font-bold"
                        >
                          quote
                        </span>
                         we discussed 
                        <span
                          class="font-bold"
                        >
                          yesterday
                        </span>
                         for Project Alpha? I need it for the final budget review this afternoon.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex border rounded mt-3 p-3 bg-white"
            >
              <div
                class="w-full"
              >
                <div
                  class="flex items-start space-x-4"
                >
                  <div
                    class="shrink-0"
                  >
                    <div
                      class="flex flex-col items-center mt-1"
                    >
                       
                      <div
                        class="mb-1"
                      >
                         
                        <div
                          class="rounded-full bg-blue-200 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
                        >
                          JS
                        </div>
                      </div>
                      <div
                        class="flex-grow flex flex-col items-center"
                      >
                         
                        <h4
                          class="m-0 text-center"
                        >
                          James Smith
                        </h4>
                         
                         
                      </div>
                    </div>
                  </div>
                  <div
                    class="grow"
                  >
                    <div
                      class="font-semibold text-gray-700 mb-1"
                    >
                      00:55
                    </div>
                    <div
                      class="text-gray-800 leading-relaxed"
                    >
                      <div>
                        Sure, 
                        <span
                          class="font-bold"
                        >
                          Madison
                        </span>
                        . I will send you an email with the 
                        <span
                          class="font-bold"
                        >
                          quote
                        </span>
                         right after this meeting. I'll also attach the revised terms of service for their review.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex border rounded mt-3 p-3 bg-white"
            >
              <div
                class="w-full"
              >
                <div
                  class="flex items-start space-x-4"
                >
                  <div
                    class="shrink-0"
                  >
                    <div
                      class="flex flex-col items-center mt-1"
                    >
                       
                      <div
                        class="mb-1"
                      >
                         
                        <div
                          class="rounded-full bg-purple-200 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
                        >
                          IG
                        </div>
                      </div>
                      <div
                        class="flex-grow flex flex-col items-center"
                      >
                         
                        <h4
                          class="m-0 text-center"
                        >
                          Isabel Garcia
                        </h4>
                         
                         
                      </div>
                    </div>
                  </div>
                  <div
                    class="grow"
                  >
                    <div
                      class="font-semibold text-gray-700 mb-1"
                    >
                      01:10
                    </div>
                    <div
                      class="text-gray-800 leading-relaxed"
                    >
                      <div>
                        Speaking of Project Alpha, I've noticed a slight delay in the asset delivery. Is there anything I can do to help expedite that process?
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex border rounded mt-3 p-3 bg-white"
            >
              <div
                class="w-full"
              >
                <div
                  class="flex items-start space-x-4"
                >
                  <div
                    class="shrink-0"
                  >
                    <div
                      class="flex flex-col items-center mt-1"
                    >
                       
                      <div
                        class="mb-1"
                      >
                         
                        <div
                          class="rounded-full bg-blue-200 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
                        >
                          JS
                        </div>
                      </div>
                      <div
                        class="flex-grow flex flex-col items-center"
                      >
                         
                        <h4
                          class="m-0 text-center"
                        >
                          James Smith
                        </h4>
                         
                         
                      </div>
                    </div>
                  </div>
                  <div
                    class="grow"
                  >
                    <div
                      class="font-semibold text-gray-700 mb-1"
                    >
                      01:25
                    </div>
                    <div
                      class="text-gray-800 leading-relaxed"
                    >
                      <div>
                        Thanks for bringing that up, 
                        <span
                          class="font-bold"
                        >
                          Isabel
                        </span>
                        . I'll follow up with the creative team immediately. We should be back on track by end of day 
                        <span
                          class="font-bold"
                        >
                          today
                        </span>
                        .
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex border rounded mt-3 p-3 bg-white"
            >
              <div
                class="w-full"
              >
                <div
                  class="flex items-start space-x-4"
                >
                  <div
                    class="shrink-0"
                  >
                    <div
                      class="flex flex-col items-center mt-1"
                    >
                       
                      <div
                        class="mb-1"
                      >
                         
                        <div
                          class="rounded-full bg-green-200 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
                        >
                          MB
                        </div>
                      </div>
                      <div
                        class="flex-grow flex flex-col items-center"
                      >
                         
                        <h4
                          class="m-0 text-center"
                        >
                          Madison Butler
                        </h4>
                         
                         
                      </div>
                    </div>
                  </div>
                  <div
                    class="grow"
                  >
                    <div
                      class="font-semibold text-gray-700 mb-1"
                    >
                      01:40
                    </div>
                    <div
                      class="text-gray-800 leading-relaxed"
                    >
                      <div>
                        Perfect, that sounds good. 
                        <span
                          class="font-bold"
                        >
                          James
                        </span>
                        , regarding the new marketing campaign, have you had a chance to review the initial drafts?
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex border rounded mt-3 p-3 bg-white"
            >
              <div
                class="w-full"
              >
                <div
                  class="flex items-start space-x-4"
                >
                  <div
                    class="shrink-0"
                  >
                    <div
                      class="flex flex-col items-center mt-1"
                    >
                       
                      <div
                        class="mb-1"
                      >
                         
                        <div
                          class="rounded-full bg-blue-200 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
                        >
                          JS
                        </div>
                      </div>
                      <div
                        class="flex-grow flex flex-col items-center"
                      >
                         
                        <h4
                          class="m-0 text-center"
                        >
                          James Smith
                        </h4>
                         
                         
                      </div>
                    </div>
                  </div>
                  <div
                    class="grow"
                  >
                    <div
                      class="font-semibold text-gray-700 mb-1"
                    >
                      01:55
                    </div>
                    <div
                      class="text-gray-800 leading-relaxed"
                    >
                      <div>
                        Yes, I did. Overall, they look promising. I have a few minor comments on the ad copy, which I'll send over in a separate email.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex border rounded mt-3 p-3 bg-white"
            >
              <div
                class="w-full"
              >
                <div
                  class="flex items-start space-x-4"
                >
                  <div
                    class="shrink-0"
                  >
                    <div
                      class="flex flex-col items-center mt-1"
                    >
                       
                      <div
                        class="mb-1"
                      >
                         
                        <div
                          class="rounded-full bg-purple-200 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
                        >
                          IG
                        </div>
                      </div>
                      <div
                        class="flex-grow flex flex-col items-center"
                      >
                         
                        <h4
                          class="m-0 text-center"
                        >
                          Isabel Garcia
                        </h4>
                         
                         
                      </div>
                    </div>
                  </div>
                  <div
                    class="grow"
                  >
                    <div
                      class="font-semibold text-gray-700 mb-1"
                    >
                      02:10
                    </div>
                    <div
                      class="text-gray-800 leading-relaxed"
                    >
                      <div>
                        Great. I'll look out for those comments. Just a reminder that the deadline for feedback is tomorrow.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex p-3"
    >
      <div
        class="w-full"
      >
        <h3
          class="text-center text-2xl font-bold mb-4 text-gray-800"
        >
          Transcript
        </h3>
        <div
          class="space-y-2"
        >
          <div
            class="flex border rounded mt-3 p-3 bg-white"
          >
            <div
              class="w-full"
            >
              <div
                class="flex items-start space-x-4"
              >
                <div
                  class="shrink-0"
                >
                  <div
                    class="flex flex-col items-center mt-1"
                  >
                     
                    <div
                      class="mb-1"
                    >
                       
                      <div
                        class="rounded-full bg-blue-200 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
                      >
                        JS
                      </div>
                    </div>
                    <div
                      class="flex-grow flex flex-col items-center"
                    >
                       
                      <h4
                        class="m-0 text-center"
                      >
                        James Smith
                      </h4>
                       
                       
                    </div>
                  </div>
                </div>
                <div
                  class="grow"
                >
                  <div
                    class="font-semibold text-gray-700 mb-1"
                  >
                    00:05
                  </div>
                  <div
                    class="text-gray-800 leading-relaxed"
                  >
                    <div>
                      Good morning, everyone. Thanks for joining today's call. I hope you all had a productive week.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex border rounded mt-3 p-3 bg-white"
          >
            <div
              class="w-full"
            >
              <div
                class="flex items-start space-x-4"
              >
                <div
                  class="shrink-0"
                >
                  <div
                    class="flex flex-col items-center mt-1"
                  >
                     
                    <div
                      class="mb-1"
                    >
                       
                      <div
                        class="rounded-full bg-blue-200 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
                      >
                        JS
                      </div>
                    </div>
                    <div
                      class="flex-grow flex flex-col items-center"
                    >
                       
                      <h4
                        class="m-0 text-center"
                      >
                        James Smith
                      </h4>
                       
                       
                    </div>
                  </div>
                </div>
                <div
                  class="grow"
                >
                  <div
                    class="font-semibold text-gray-700 mb-1"
                  >
                    00:15
                  </div>
                  <div
                    class="text-gray-800 leading-relaxed"
                  >
                    <div>
                      Hi, 
                      <span
                        class="font-bold"
                      >
                        Madison
                      </span>
                      ! How are you doing today? I wanted to quickly touch base on the client proposal.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex border rounded mt-3 p-3 bg-white"
          >
            <div
              class="w-full"
            >
              <div
                class="flex items-start space-x-4"
              >
                <div
                  class="shrink-0"
                >
                  <div
                    class="flex flex-col items-center mt-1"
                  >
                     
                    <div
                      class="mb-1"
                    >
                       
                      <div
                        class="rounded-full bg-green-200 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
                      >
                        MB
                      </div>
                    </div>
                    <div
                      class="flex-grow flex flex-col items-center"
                    >
                       
                      <h4
                        class="m-0 text-center"
                      >
                        Madison Butler
                      </h4>
                       
                       
                    </div>
                  </div>
                </div>
                <div
                  class="grow"
                >
                  <div
                    class="font-semibold text-gray-700 mb-1"
                  >
                    00:25
                  </div>
                  <div
                    class="text-gray-800 leading-relaxed"
                  >
                    <div>
                      Very good, thanks, 
                      <span
                        class="font-bold"
                      >
                        James
                      </span>
                      ! I'm doing well. The client proposal is almost ready, just finalizing a few figures.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex border rounded mt-3 p-3 bg-white"
          >
            <div
              class="w-full"
            >
              <div
                class="flex items-start space-x-4"
              >
                <div
                  class="shrink-0"
                >
                  <div
                    class="flex flex-col items-center mt-1"
                  >
                     
                    <div
                      class="mb-1"
                    >
                       
                      <div
                        class="rounded-full bg-green-200 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
                      >
                        MB
                      </div>
                    </div>
                    <div
                      class="flex-grow flex flex-col items-center"
                    >
                       
                      <h4
                        class="m-0 text-center"
                      >
                        Madison Butler
                      </h4>
                       
                       
                    </div>
                  </div>
                </div>
                <div
                  class="grow"
                >
                  <div
                    class="font-semibold text-gray-700 mb-1"
                  >
                    00:40
                  </div>
                  <div
                    class="text-gray-800 leading-relaxed"
                  >
                    <div>
                      Oh, before I forget, can you please send me the 
                      <span
                        class="font-bold"
                      >
                        quote
                      </span>
                       we discussed 
                      <span
                        class="font-bold"
                      >
                        yesterday
                      </span>
                       for Project Alpha? I need it for the final budget review this afternoon.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex border rounded mt-3 p-3 bg-white"
          >
            <div
              class="w-full"
            >
              <div
                class="flex items-start space-x-4"
              >
                <div
                  class="shrink-0"
                >
                  <div
                    class="flex flex-col items-center mt-1"
                  >
                     
                    <div
                      class="mb-1"
                    >
                       
                      <div
                        class="rounded-full bg-blue-200 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
                      >
                        JS
                      </div>
                    </div>
                    <div
                      class="flex-grow flex flex-col items-center"
                    >
                       
                      <h4
                        class="m-0 text-center"
                      >
                        James Smith
                      </h4>
                       
                       
                    </div>
                  </div>
                </div>
                <div
                  class="grow"
                >
                  <div
                    class="font-semibold text-gray-700 mb-1"
                  >
                    00:55
                  </div>
                  <div
                    class="text-gray-800 leading-relaxed"
                  >
                    <div>
                      Sure, 
                      <span
                        class="font-bold"
                      >
                        Madison
                      </span>
                      . I will send you an email with the 
                      <span
                        class="font-bold"
                      >
                        quote
                      </span>
                       right after this meeting. I'll also attach the revised terms of service for their review.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex border rounded mt-3 p-3 bg-white"
          >
            <div
              class="w-full"
            >
              <div
                class="flex items-start space-x-4"
              >
                <div
                  class="shrink-0"
                >
                  <div
                    class="flex flex-col items-center mt-1"
                  >
                     
                    <div
                      class="mb-1"
                    >
                       
                      <div
                        class="rounded-full bg-purple-200 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
                      >
                        IG
                      </div>
                    </div>
                    <div
                      class="flex-grow flex flex-col items-center"
                    >
                       
                      <h4
                        class="m-0 text-center"
                      >
                        Isabel Garcia
                      </h4>
                       
                       
                    </div>
                  </div>
                </div>
                <div
                  class="grow"
                >
                  <div
                    class="font-semibold text-gray-700 mb-1"
                  >
                    01:10
                  </div>
                  <div
                    class="text-gray-800 leading-relaxed"
                  >
                    <div>
                      Speaking of Project Alpha, I've noticed a slight delay in the asset delivery. Is there anything I can do to help expedite that process?
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex border rounded mt-3 p-3 bg-white"
          >
            <div
              class="w-full"
            >
              <div
                class="flex items-start space-x-4"
              >
                <div
                  class="shrink-0"
                >
                  <div
                    class="flex flex-col items-center mt-1"
                  >
                     
                    <div
                      class="mb-1"
                    >
                       
                      <div
                        class="rounded-full bg-blue-200 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
                      >
                        JS
                      </div>
                    </div>
                    <div
                      class="flex-grow flex flex-col items-center"
                    >
                       
                      <h4
                        class="m-0 text-center"
                      >
                        James Smith
                      </h4>
                       
                       
                    </div>
                  </div>
                </div>
                <div
                  class="grow"
                >
                  <div
                    class="font-semibold text-gray-700 mb-1"
                  >
                    01:25
                  </div>
                  <div
                    class="text-gray-800 leading-relaxed"
                  >
                    <div>
                      Thanks for bringing that up, 
                      <span
                        class="font-bold"
                      >
                        Isabel
                      </span>
                      . I'll follow up with the creative team immediately. We should be back on track by end of day 
                      <span
                        class="font-bold"
                      >
                        today
                      </span>
                      .
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex border rounded mt-3 p-3 bg-white"
          >
            <div
              class="w-full"
            >
              <div
                class="flex items-start space-x-4"
              >
                <div
                  class="shrink-0"
                >
                  <div
                    class="flex flex-col items-center mt-1"
                  >
                     
                    <div
                      class="mb-1"
                    >
                       
                      <div
                        class="rounded-full bg-green-200 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
                      >
                        MB
                      </div>
                    </div>
                    <div
                      class="flex-grow flex flex-col items-center"
                    >
                       
                      <h4
                        class="m-0 text-center"
                      >
                        Madison Butler
                      </h4>
                       
                       
                    </div>
                  </div>
                </div>
                <div
                  class="grow"
                >
                  <div
                    class="font-semibold text-gray-700 mb-1"
                  >
                    01:40
                  </div>
                  <div
                    class="text-gray-800 leading-relaxed"
                  >
                    <div>
                      Perfect, that sounds good. 
                      <span
                        class="font-bold"
                      >
                        James
                      </span>
                      , regarding the new marketing campaign, have you had a chance to review the initial drafts?
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex border rounded mt-3 p-3 bg-white"
          >
            <div
              class="w-full"
            >
              <div
                class="flex items-start space-x-4"
              >
                <div
                  class="shrink-0"
                >
                  <div
                    class="flex flex-col items-center mt-1"
                  >
                     
                    <div
                      class="mb-1"
                    >
                       
                      <div
                        class="rounded-full bg-blue-200 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
                      >
                        JS
                      </div>
                    </div>
                    <div
                      class="flex-grow flex flex-col items-center"
                    >
                       
                      <h4
                        class="m-0 text-center"
                      >
                        James Smith
                      </h4>
                       
                       
                    </div>
                  </div>
                </div>
                <div
                  class="grow"
                >
                  <div
                    class="font-semibold text-gray-700 mb-1"
                  >
                    01:55
                  </div>
                  <div
                    class="text-gray-800 leading-relaxed"
                  >
                    <div>
                      Yes, I did. Overall, they look promising. I have a few minor comments on the ad copy, which I'll send over in a separate email.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex border rounded mt-3 p-3 bg-white"
          >
            <div
              class="w-full"
            >
              <div
                class="flex items-start space-x-4"
              >
                <div
                  class="shrink-0"
                >
                  <div
                    class="flex flex-col items-center mt-1"
                  >
                     
                    <div
                      class="mb-1"
                    >
                       
                      <div
                        class="rounded-full bg-purple-200 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
                      >
                        IG
                      </div>
                    </div>
                    <div
                      class="flex-grow flex flex-col items-center"
                    >
                       
                      <h4
                        class="m-0 text-center"
                      >
                        Isabel Garcia
                      </h4>
                       
                       
                    </div>
                  </div>
                </div>
                <div
                  class="grow"
                >
                  <div
                    class="font-semibold text-gray-700 mb-1"
                  >
                    02:10
                  </div>
                  <div
                    class="text-gray-800 leading-relaxed"
                  >
                    <div>
                      Great. I'll look out for those comments. Just a reminder that the deadline for feedback is tomorrow.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should render TranscriptRow component 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex border rounded mt-3 p-3 bg-white"
      >
        <div
          class="w-full"
        >
          <div
            class="flex items-start space-x-4"
          >
            <div
              class="shrink-0"
            >
              <div
                class="flex flex-col items-center mt-1"
              >
                 
                <div
                  class="mb-1"
                >
                   
                  <div
                    class="rounded-full bg-blue-500 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
                  >
                    JS
                  </div>
                </div>
                <div
                  class="flex-grow flex flex-col items-center"
                >
                   
                  <h4
                    class="m-0 text-center"
                  >
                    James Smith
                  </h4>
                   
                   
                </div>
              </div>
            </div>
            <div
              class="grow"
            >
              <div
                class="font-semibold text-gray-700 mb-1"
              >
                00:10
              </div>
              <div
                class="text-gray-800 leading-relaxed"
              >
                <div>
                  Good morning, everyone.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex border rounded mt-3 p-3 bg-white"
    >
      <div
        class="w-full"
      >
        <div
          class="flex items-start space-x-4"
        >
          <div
            class="shrink-0"
          >
            <div
              class="flex flex-col items-center mt-1"
            >
               
              <div
                class="mb-1"
              >
                 
                <div
                  class="rounded-full bg-blue-500 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
                >
                  JS
                </div>
              </div>
              <div
                class="flex-grow flex flex-col items-center"
              >
                 
                <h4
                  class="m-0 text-center"
                >
                  James Smith
                </h4>
                 
                 
              </div>
            </div>
          </div>
          <div
            class="grow"
          >
            <div
              class="font-semibold text-gray-700 mb-1"
            >
              00:10
            </div>
            <div
              class="text-gray-800 leading-relaxed"
            >
              <div>
                Good morning, everyone.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
